# GameBoyWeb

./: .gitignore  .gitmodules  CMakeLists.txt  ClassRelationDiagram.txt  GameBoyWeb.files  GameBoyWeb.pro  README.md
roms/: 01-special.gb  drmario.gb
src/: CMakeLists.txt  Cartridge.cpp  DebugTypes.hpp  GameBoy.cpp  GameBoy.hpp  GraphicTypes.cpp  GraphicTypes.hpp  Instruction.cpp  Instruction.hpp  InterruptController.cpp  InterruptController.hpp  Joypad.cpp  Joypad.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MainWindow.ui  MainWindow1.cpp  MainWindow1.hpp  Memory.cpp  Memory.hpp  Processor.cpp  Processor.hpp  QtRenderer.cpp  QtRenderer.hpp  Ram.cpp  Renderer.hpp  Rom.hpp  SerialDataTransfer.cpp  SerialDataTransfer.hpp  Timer.cpp  instructions.cpp  main.cpp  mainwindow.h  utils.cpp  utils.hpp
src/backend/: CMakeLists.txt  CPU.cpp  CPU.hpp  CPUClock.hpp  CPUInstructions.cpp  Cartridge.cpp  Cartridge.hpp  Clock.hpp  DebugTypes.hpp  Disassembler.cpp  Disassembler.hpp  GameBoy.cpp  GameBoy.hpp  GraphicTypes.cpp  GraphicTypes.hpp  Instruction.cpp  Instruction.hpp  InstructionInfo.hpp  InterruptController.cpp  InterruptController.hpp  Joypad.cpp  Joypad.hpp  MBC1.cpp  Memory.cpp  Memory.hpp  MemoryBankController.hpp  PPU.cpp  PPU.hpp  ProceduresPrefixed.cpp  ProceduresUnprefixed.cpp  Processor.cpp  Processor.hpp  Ram.cpp  Ram.hpp  RegisterPair.hpp  Renderer.hpp  Rom.cpp  Rom.hpp  SerialDataTransfer.cpp  SerialDataTransfer.hpp  (+8 more)
src/frontend/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  QtRenderer.cpp  QtRenderer.hpp
tests/: CMakeLists.txt  CPULogMaker.cpp
tests/integration/: CMakeLists.txt  CPUIntegrationTest.cpp  CPULogMaker.cpp  IntegrationTestUtils.hpp
tests/src/backend/: CMakeLists.txt  CPUTests.cpp  CartridgeTests.cpp  InterruptControllerTests.cpp  JoypadTests.cpp  MemoryTests.cpp  ProceduresPrefixedTests.cpp  ProceduresUnprefixedTests.cpp  RegisterPairTests.cpp  SerialDataTransferTests.cpp  TimerTests.cpp  UtilsTests.cpp
