qt_add_library(Utils STATIC utils.cpp)
qt_add_library(Memory STATIC Memory.cpp)
qt_add_library(GameBoy STATIC GameBoy.cpp)
# qt_add_library(Disassembler STATIC Disassembler.cpp)
qt_add_library(CPU STATIC CPU.cpp ProceduresPrefixed.cpp ProceduresUnprefixed.cpp)
qt_add_library(RegisterPair STATIC RegisterPair.hpp)
qt_add_library(Instruction STATIC Instruction.cpp)
qt_add_library(Cartridge STATIC Cartridge.cpp)
qt_add_library(Timer STATIC Timer.cpp)
qt_add_library(Joypad STATIC Joypad.cpp)
qt_add_library(InterruptController STATIC InterruptController.cpp)
qt_add_library(SerialDataTransfer STATIC SerialDataTransfer.cpp)
qt_add_library(DebugTypes STATIC DebugTypes.hpp)
qt_add_library(PPU STATIC PPU.cpp)
qt_add_library(GraphicTypes STATIC GraphicTypes.cpp)


target_link_libraries(GraphicTypes PRIVATE Utils)
target_link_libraries(InterruptController PRIVATE Utils)
target_link_libraries(PPU PRIVATE GraphicTypes InterruptController Utils)
target_link_libraries(SerialDataTransfer PRIVATE InterruptController Utils)
target_link_libraries(Joypad PRIVATE InterruptController Utils)
target_link_libraries(Timer PRIVATE InterruptController Utils)
target_link_libraries(Cartridge PRIVATE Qt6::Core)
target_link_libraries(Utils PUBLIC Qt6::Core)
target_link_libraries(Memory PUBLIC InterruptController Timer Joypad SerialDataTransfer PPU Cartridge Utils Qt6::Core)
# target_link_libraries(Disassembler PRIVATE Utils Memory Qt6::Core Qt6::Widgets)
target_link_libraries(RegisterPair PUBLIC Utils)
target_link_libraries(Instruction PRIVATE Utils)
target_link_libraries(CPU PRIVATE Utils RegisterPair Instruction Memory InterruptController DebugTypes)
target_link_libraries(GameBoy PRIVATE InterruptController Joypad Timer Memory CPU SerialDataTransfer PPU)
