qt_add_library(Utils STATIC utils.hpp)
qt_add_library(Memory STATIC Memory.cpp)
qt_add_library(GameBoy STATIC GameBoy.cpp)
qt_add_library(CPU STATIC CPU.cpp instructions.cpp)
qt_add_library(RegisterPair STATIC RegisterPair.hpp)
qt_add_library(Cartridge STATIC Cartridge.cpp)
qt_add_library(Timer STATIC Timer.cpp)
qt_add_library(Joypad STATIC Joypad.cpp)
qt_add_library(Interrupts STATIC InterruptController.cpp)
qt_add_library(Serial STATIC SerialDataTransfer.cpp)
qt_add_library(DebugTypes STATIC DebugTypes.hpp)
qt_add_library(PPU STATIC PPU.cpp)
qt_add_library(GraphicTypes STATIC GraphicTypes.cpp)
qt_add_library(Renderer STATIC Renderer.hpp)
qt_add_library(Ram STATIC Ram.cpp)
qt_add_library(Rom STATIC Rom.cpp)
qt_add_library(MBC1 STATIC MBC1.cpp)

target_link_libraries(Rom PUBLIC Qt6::Core)
target_link_libraries(MBC1 PRIVATE Ram Rom)
target_link_libraries(Cartridge PRIVATE MBC1 Rom Ram Qt6::Core)
target_link_libraries(Utils PUBLIC Qt6::Core)
target_link_libraries(Ram PRIVATE Utils)
target_link_libraries(GraphicTypes PRIVATE Utils)
target_link_libraries(Interrupts PRIVATE Utils)
target_link_libraries(Serial PRIVATE Interrupts Utils)
target_link_libraries(Joypad PRIVATE Interrupts Utils)
target_link_libraries(Timer PRIVATE Interrupts Utils)
target_link_libraries(PPU PRIVATE Interrupts Memory Renderer GraphicTypes CPU Utils)
target_link_libraries(Memory PUBLIC Interrupts CPU Ram Timer Joypad Serial PPU Cartridge Utils Qt6::Core)
target_link_libraries(RegisterPair PUBLIC Utils)
target_link_libraries(CPU PRIVATE Utils Interrupts RegisterPair DebugTypes)
target_link_libraries(GameBoy PRIVATE Interrupts Joypad Timer Memory CPU Serial PPU Renderer)
